# llm-extract

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: architecture.md  data_contract.md  formatting_spec.md
examples/: run_pipeline.py  sample_report.md
fixtures/: README.md
fixtures/expected/: source_a.json  source_b.json
fixtures/source_a/: product_001.html  product_002_missing_price.html  product_003_nested_specs.html
fixtures/source_b/: listing_alpha.html  listing_beta_dirty_currency.html  listing_gamma_table_specs.html
src/llm_extract/: __init__.py  __main__.py  chain.py  cli.py  config.py  consistency.py  normalize.py  prompts.py  report.py  schemas.py  verify.py
src/llm_extract/delivery/: __init__.py  json_sink.py  sheets.py
src/llm_extract/ingest/: __init__.py  fixtures.py  live_source.py  preprocess.py
src/llm_extract/llm/: __init__.py  base.py  mock.py  openrouter.py
tests/: conftest.py  test_chain_mock.py  test_cli.py  test_consistency.py  test_delivery_json.py  test_ingest.py  test_live_source.py  test_normalize.py  test_preprocess.py  test_report.py  test_schemas.py  test_sheets_mock.py  test_verify.py
tests/data/: live_source_snapshot.html
