[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "llm-extract"
version = "0.1.0"
description = "LLM-assisted extraction from messy HTML into validated, cross-checked, delivered data."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Raphael Fakhri" }]
keywords = ["llm", "scraping", "extraction", "pydantic", "openrouter", "langchain"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "httpx==0.27.2",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "beautifulsoup4==4.12.3",
  "lxml==5.3.0",
  "gspread==6.1.2",
  "google-auth==2.35.0",
  "typer==0.12.5",
  "click==8.1.7",
  "tenacity==9.0.0",
  "rich==13.9.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "ruff==0.6.9",
  "mypy==1.11.2",
  "pre-commit==3.8.0",
  "types-beautifulsoup4==4.12.0.20240907",
]

[project.scripts]
llm-extract = "llm_extract.cli:app"

[project.urls]
Homepage = "https://github.com/RaphaelFakhri/llm-extract"
Repository = "https://github.com/RaphaelFakhri/llm-extract"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_extract"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.coverage.run]
source = ["llm_extract"]
branch = true

[tool.mypy]
python_version = "3.11"
packages = ["llm_extract"]
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
